HomeAssistant/Manifests/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      serviceAccountName: hass
      containers:
      - name: mosquitto
        image: docker.io/toke/mosquitto
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.5
            memory: 500Mi
        ports:
        - containerPort: 9001
        - containerPort: 8883
        volumeMounts:
        - name: mosquitto
          mountPath: /srv/mqtt/config
        - name: mosquitto-data
          mountPath: /srv/mqtt/data
      volumes:
      - name: mosquitto
        persistentVolumeClaim:
          claimName: mosquitto
      - name: mosquitto-data
        persistentVolumeClaim:
          claimName: mosquitto-data
