HomeAssistant/Manifests/mosquitto-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-svc
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 1883
      targetPort: 1883
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 31883
