HomeAssistant/Manifests/hass-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
  name: hass-ingress
  namespace: hass
spec:
  ingressClassName: openshift-default
  rules:
    - host: hass.okd.bne-home.net
      http:
        paths:
          - backend:
              service:
                name: home-assistant-web
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hass.okd.bne-home.net
      secretName: hass-tls-le
